test_suite/tests/ui/duplicate-attribute/rename-rename-de.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(rename = "x")]
    #[serde(rename(deserialize = "y"))]
    x: (),
}

fn main() {}
